--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "yarn run clear && yarn run build:types && yarn run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel ./src --out-dir dist --extensions \".ts\" --source-maps inline",
-    "clear": "rm -rf ./dist"
+    "clear": "rm -rf ./dist",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -30,7 +31,9 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-jest": "^23.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2",
     "typescript": "^3.4.3"
   }
