--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "dependencies": {},
   "scripts": {
     "start": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn nodemon --verbose --exec babel-node --extensions \".ts\" src/app.ts\"",
+    "start-test": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn nodemon --verbose --exec babel-node --extensions \".ts\" yarn jest\"",
     "type-check": "yarn tsc --noEmit",
     "type-check:watch": "yarn run type-check --pretty --watch --preserveWatchOutput",
     "serve": "node ./dist/app.js",
     "build": "yarn run clear && yarn run build:types && yarn run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel ./src --out-dir dist --extensions \".ts\" --source-maps inline",
-    "clear": "rm -rf ./dist"
+    "clear": "rm -rf ./dist",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -21,6 +23,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
@@ -30,8 +33,11 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-jest": "^23.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2",
+    "ts-jest": "^24.3.0",
     "typescript": "^3.4.3"
   }
 }
