--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules", "@types", "tmp", "build", "dist"]
+  "exclude": ["node_modules", "@types", "tmp", "build", "dist", "**/*.spec.ts"]
 }
