--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {},
   "scripts": {
     "start": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn nodemon --verbose --exec babel-node --extensions \".ts\" src/app.ts\"",
-    "start-test": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn nodemon --verbose --exec babel-node --extensions \".ts\" yarn jest\"",
+    "start-test": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn run test:watch\"",
+    "test:watch": "jest --watch",
     "type-check": "yarn tsc --noEmit",
     "type-check:watch": "yarn run type-check --pretty --watch --preserveWatchOutput",
     "serve": "node ./dist/app.js",
