--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "immer": "^5.2.1"
   },
   "scripts": {
-    "start": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn nodemon --verbose --exec babel-node --extensions \".ts\" src/app.ts\"",
+    "start": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn nodemon --verbose --exec babel-node --extensions \".js,.ts\" src/app.ts\"",
     "start-test": "concurrently --kill-others --names \"tsc,node\" -c \"blue,green\" \"yarn run type-check:watch\"  \"yarn run test:watch\"",
     "test:watch": "jest --watch",
     "type-check": "yarn tsc --noEmit",
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^25.1.0",
     "concurrently": "^5.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
